--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,10 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 
 
 		<!-- ********** Jackson ********** -->
