--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<slf4j.version>1.6.1</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
 		<bootstrap.version>3.2.0</bootstrap.version>
+		<springsecurity.version>4.1.0.RELEASE</springsecurity.version>
 	</properties>
 
 	<dependencies>
@@ -120,10 +121,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		<!-- Spring Security -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${springsecurity.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${springsecurity.version}</version>
 		</dependency>
 
 
