--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.3.3.RELEASE</spring.version>
 		<jetty.version>9.0.2.v20130417</jetty.version>
+        <!--
 		<slf4j.version>1.6.1</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
+		-->
 		<bootstrap.version>3.2.0</bootstrap.version>
 		<springsecurity.version>4.1.3.RELEASE</springsecurity.version>
 	</properties>
@@ -34,7 +36,7 @@
 			<version>${bootstrap.version}</version>
 		</dependency>
 
-		<!-- ********** J2EE ********** -->
+		<!-- ********** J2EE **********
 		<dependency>
 			<groupId>org.glassfish.extras</groupId>
 			<artifactId>glassfish-embedded-all</artifactId>
@@ -47,6 +49,7 @@
 			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
+		-->
 
 		<!-- ********** Database ********** -->
 		<dependency>
@@ -64,6 +67,7 @@
 
 
 		<!-- ********** Logging ********** -->
+        <!--
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -79,34 +83,27 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+		-->
 
 		<!-- ********** Spring ********** -->
+        <!--
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions>
-				<exclusion>
-					<artifactId>logback-classic</artifactId>
-					<groupId>ch.qos.logback</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>log4j-over-slf4j</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
 		</dependency>
-        <!-- spring-tomcat for deploying war
+         spring-tomcat for deploying war
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
+        <!--<scope>provided</scope>-->
         </dependency>
-        -->
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -121,11 +118,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>1.4.1.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
 		</dependency>
+
 
 		<!-- Spring Security -->
 		<dependency>
