fixed java conf

--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-         spring-tomcat for deploying war
+        <!-- spring-tomcat for deploying war -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
