--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 
 
 		<!-- ********** Logging ********** -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
         <!--
 		<dependency>
 			<groupId>org.slf4j</groupId>
