--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.5.8",
-    "bower": "^1.7.9"
+    "angular": "^1.5.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.0",
     "angular-route": "^1.5.8",
     "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2"
