--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.5.8"
   },
   "devDependencies": {
+    "angular-bootstrap": "^0.12.2",
     "angular-mocks": "^1.2.0",
     "angular-route": "^1.5.8",
     "jasmine-core": "^2.5.2",
