--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-bootstrap": "^0.12.2",
     "angular-mocks": "^1.2.0",
     "angular-route": "^1.5.8",
+    "bower": "^1.8.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
