--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,13 @@
                 </exclusion>
             </exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>4.0.0.RELEASE</version>
+		</dependency>
+
 
 
 		<!-- Spring Security -->
